<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group
        >
        <item
            android:id="@+id/nav_terms"
            android:title="@string/menu_terms"
            android:iconTint="@color/colorButton"
            />
        <item
            android:id="@+id/nav_courses"
            android:title="@string/menu_courses"
            android:iconTint="@color/colorButton"/>
        <item
            android:id="@+id/nav_assessments"
            android:title="@string/menu_assessments"
            android:iconTint="@color/colorButton"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings"
            android:iconTint="@color/colorButton"/>
    </group>
</menu>