<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="@layout/activity_term_editor"
android:id="@+id/term_editor_layout"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior"
tools:context=".TermEditorActivity"
    >

<TextView
    android:id="@+id/termTitleLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="40dp"
    android:text="@string/term_title"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_goneMarginTop="40dp" />

<EditText
    android:id="@+id/term_title_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:layout_marginStart="16dp"
    android:autofillHints="@string/term_title"
    android:ems="8"
    android:hint="@string/term_title"
    android:inputType="textPersonName"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    app:layout_constraintBottom_toBottomOf="@+id/termTitleLabel"
    app:layout_constraintStart_toEndOf="@+id/termTitleLabel" />

<TextView
    android:id="@+id/term_start_date_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:text="@string/start_date"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/termTitleLabel" />

<EditText
    android:id="@+id/term_start_date_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints="sta"
    android:ems="8"
    android:hint="@string/start_date"
    android:inputType="date"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    app:layout_constraintBottom_toBottomOf="@+id/term_start_date_label"
    app:layout_constraintStart_toStartOf="@+id/term_title_edit_text"
    tools:autofillHints="@string/start_date" />

<Button
    android:id="@+id/start_date_picker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:background="@color/colorButton"
    android:text="@string/start_button"
    app:layout_constraintBottom_toBottomOf="@id/term_start_date_edit_text"
    app:layout_constraintStart_toEndOf="@id/term_start_date_edit_text" />

<TextView
    android:id="@+id/term_end_date_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="24dp"
    android:text="@string/end_date"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/term_start_date_label" />

<EditText
    android:id="@+id/term_end_date_edit_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:autofillHints="@string/end_date"
    android:ems="8"
    android:hint="@string/end_date"
    android:inputType="date"
    app:layout_constraintBottom_toBottomOf="@+id/term_end_date_label"
    app:layout_constraintStart_toStartOf="@+id/term_start_date_edit_text" />

<Button
    android:id="@+id/end_date_picker"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:background="@color/colorButton"
    android:text="@string/end_button"
    app:layout_constraintBottom_toBottomOf="@+id/term_end_date_edit_text"
    app:layout_constraintStart_toEndOf="@+id/term_end_date_edit_text" />

<TextView
    android:id="@+id/course_list"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="60dp"
    android:text="@string/course_list"
    android:textStyle="bold"
    android:textAppearance="@style/TextAppearance.AppCompat.Large"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/term_end_date_edit_text" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/course_list_recycler_view"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    tools:listitem="@layout/courses_list"
    android:layout_marginTop="24dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/course_list" >


</androidx.recyclerview.widget.RecyclerView>

<Button
    android:id="@+id/add_course_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorButton"
    android:layout_marginTop="24dp"
    android:text="@string/add_course"
    android:enabled="false"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/course_list_recycler_view" />
</androidx.constraintlayout.widget.ConstraintLayout>