<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_mentor_editor"
    android:id="@+id/mentor_editor_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MentorEditorActivity"
    >

    <TextView
        android:id="@+id/mentorNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/mentor_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginTop="40dp" />

    <EditText
        android:id="@+id/mentor_name_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:autofillHints="@string/mentor_name"
        android:ems="8"
        android:hint="@string/mentor_name"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/mentorNameLabel"
        app:layout_constraintStart_toEndOf="@+id/mentorNameLabel" />

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/mentor_phone_label"
        android:text="@string/mentor_phone_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/mentorNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/mentorNameLabel" />

    <EditText
        android:id="@+id/mentor_phone_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/phone_number"
        android:ems="8"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/phone_label"
        app:layout_constraintStart_toStartOf="@+id/mentor_name_edit_text" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/mentor_email_label"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/phone_label"
        app:layout_constraintTop_toBottomOf="@+id/phone_label" />

    <EditText
        android:id="@+id/mentor_email_edit_text"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:autofillHints="Email Address"
        android:ems="8"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/email_label"
        app:layout_constraintStart_toStartOf="@+id/mentor_phone_edit_text" />

    <TextView
        android:id="@+id/assessment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Course"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="@+id/email_label"
        app:layout_constraintTop_toBottomOf="@+id/email_label" />

    <TextView
        android:id="@+id/mentor_course_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:inputType="textPersonName"
        android:hint="Course Title"
        app:layout_constraintBottom_toBottomOf="@+id/assessment_label"
        app:layout_constraintStart_toStartOf="@+id/mentor_email_edit_text" />

    <Spinner
        android:id="@+id/mentor_course_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="8"
        app:layout_constraintBottom_toBottomOf="@+id/mentor_course_title_text_view"
        app:layout_constraintStart_toEndOf="@+id/mentor_course_title_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
